[package]
name = "litchi-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["cookies", "json"] }
litchitool = { path = "../litchitool" }
thiserror = "1.0.44"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
csv = "1.2.2"
insta = "1.31.0"
tokio = { version = "1.29.1", features = ["full"] }
