[package]
name = "litchi-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
litchitool = { path = "../litchitool" }
litchi-api = { path = "../litchi-api" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
