[package]
name = "litchitool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
csv = "1.2.2"
num_enum = "0.6.1"
thiserror = "1.0.44"
tracing = { workspace = true }

[dev-dependencies]
insta = "1.31.0"
